# curl_replacement

./: .gitignore  Cargo.toml  README.md  help.txt
src/: displayer.rs  errors.rs  formatter.rs  handler.rs  main.rs  types.rs
src/displayers/: mod.rs
src/formatters/: mod.rs
src/handlers/: mod.rs
