[package]
name = "curl-replacment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#https://docs.rs/clap/latest/clap/_derive/index.html#arg-attributes
clap = { version = "4.2.7", features = ["derive"] }
#https://crates.io/crates/colored
colored = "2.0.0"
#https://docs.rs/reqwest/latest/reqwest/
reqwest = { version = "0.11", features = ["json", "blocking"] }
